2008-11-01  Scott Ellington <scott.ellington@gmail.com> 

	* Data/Shapefile/DBaseIIIFile.cs, Cumberland.csproj: add DBase III
	  reader

2008-10-31  Scott Ellington <scott.ellington@gmail.com> 

	* Layer.cs: add CreateFromData helper
	* Xml/Serialization/MapSerializer.cs, Data/Shapefile/Shapefile.cs,
	  Data/IFileFeatureProvider.cs, Data/IDBFeatureProvider.cs,
	  Data/IFileFeatureSource.cs, Data/IDatabaseFeatureSource.cs,
	  Cumberland.csproj: rename providers to sources

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Xml/Serialization/MapSerializer.cs: convert relative file paths in
	  map files to absolute

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Rectangle.cs: add Overlaps()
	* Data/Shapefile/Shapefile.cs, Data/IFeatureSource.cs,
	  Data/SimpleFeatureSource.cs: add GetFeatures() overload

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Xml/Serialization/MapSerializer.cs: serialize fix

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Xml/Serialization/MapSerializer.cs: add Serialize overload

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Xml/Serialization/MapSerializer.cs: fixes

2008-10-29  Scott Ellington <scott.ellington@gmail.com> 

	* Xml/Serialization/MapSerializer.cs: improve
	* Data/IDBFeatureProvider.cs: simplify

2008-10-29  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-28  Scott Ellington <scott.ellington@gmail.com> 

	* Map.cs: add AddLayerByFeatureTypeAndExtents()
	* Rectangle.cs: Add Area

2008-10-26  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-26  Scott Ellington <scott.ellington@gmail.com> 

	* Rectangle.cs: add center setter

2008-10-25  Scott Ellington <scott.ellington@gmail.com> 

	* Feature.cs: add XmlIncludes for serialization
	* Ring.cs: fix Close() bug
	* Data/SimpleFeatureSource.cs: add

2008-10-23  Scott Ellington <scott.ellington@gmail.com> 

	* Point.cs: add default ctor

2008-10-22  Scott Ellington <scott.ellington@gmail.com> 
