@@ -1,3 +1,8 @@
+2008-11-02  Scott Ellington <scott.ellington@gmail.com> 
+
+	* WellKnownText.cs: add create WKT methods
+	* Data/Shapefile/DBaseIIIFile.cs: remove warnings
+
 2008-11-01  Scott Ellington <scott.ellington@gmail.com> 
 
 	* Data/Shapefile/DBaseIIIFile.cs, Cumberland.csproj: add DBase III
